# cognibot

./: .gitignore  README.md  pyproject.toml
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml
commands/: install-or-update.md
rules/: cognibot-brain-first.mdc
scripts/: cognibot.sh
src/cognibot/: architecture.py  cli.py  cognibot-generate-architecture.md  cognibot-ui.md  doctor.py  generate-architecture.md  knowledge.py  models.py  render.py  run_ledger.py  scan.py  serve.py  stats.py  util.py
src/cognibot/templates/: brain.html
tests/: test_render.py  test_scan.py  test_stats.py  test_util.py
