[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognibot"
version = "0.0.2"
description = "Scan and visualize ROS2 repo structure for AI agents"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cognibot = "cognibot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cognibot"]

[tool.hatch.build.targets.wheel.force-include]
"src/cognibot/templates/brain.html" = "cognibot/templates/brain.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
